--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-CatLike/[Ll]ibrary/
+#CatLike/[Ll]ibrary
 CatLike/[Tt]emp/
 CatLike/[Oo]bj/
 CatLike/[Bb]uild/
@@ -55,3 +55,4 @@ sysinfo.txt
 Editor.meta
 Logs
 Bundles
+CatLike/Logs
