--- a/CatLike/Assembly-CSharp.csproj
+++ b/CatLike/Assembly-CSharp.csproj
@@ -59,19 +59,22 @@
     <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio\2019\Professional\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Move\OrbitCamera\OrbitCamera.cs" />
     <Compile Include="Assets\Scripts\Move\PushSphereAround\PushSphereAround.cs" />
     <Compile Include="Assets\Scripts\Base\Fractal\Fractal.cs" />
     <Compile Include="Assets\Scripts\Base\Graph\FunctionLibrary.cs" />
     <Compile Include="Assets\Scripts\Base\Graph\GraphFunction.cs" />
     <Compile Include="Assets\Scripts\Base\ClockMove\ClockMove.cs" />
     <Compile Include="Assets\Scripts\Base\Graph\DrawGraph.cs" />
+    <Compile Include="Assets\Scripts\Move\Gravity\GravityManager.cs" />
     <Compile Include="Assets\Scripts\ResolutionManager.cs" />
     <Compile Include="Assets\Scripts\Base\Graph\ScrollRolling.cs" />
     <Compile Include="Assets\Scripts\Move\SampleMove\MoveSphere.cs" />
     <Compile Include="Assets\Scripts\Test.cs" />
     <Compile Include="Assets\Scripts\Base\Graph\GraphEnum.cs" />
     <Compile Include="Assets\Scripts\Base\Graph\FrameRateCounter.cs" />
-    <Compile Include="Assets\Scripts\Move\OrbitCamera\OrbitCamera.cs" />
+    <Compile Include="Assets\Scripts\Move\Gravity\CustomGravity.cs" />
+    <Compile Include="Assets\Scripts\Move\Gravity\CustomRigidbody.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
