--- a/CatLike/Assembly-CSharp.csproj
+++ b/CatLike/Assembly-CSharp.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Assets\Scripts\Move\Gravity\ChangeNormal.cs" />
     <Compile Include="Assets\Scripts\ObjManager\PropertyAttribute\FloatRangeSliderAttribute.cs" />
     <Compile Include="Assets\Scripts\GUITest\TestGUILayout.cs" />
+    <Compile Include="Assets\Scripts\EditorWindow\TestEditorWindow.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
